syntax = "proto3";
package fifsky.blog.api.v1;

import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";

option go_package = "gen/api/v1";

// 用户服务
service UserService {
  // 前端语言包，后台启动时加载
  rpc Get(GetUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/admin/user/get"
      body: "*"
    };
  }
}

message GetUserRequest {
  // 用户ID
  int32 id = 1[
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message User {
  string id = 1;
  string name = 2;
  string nick_name = 3;
  string email = 4;
  int32 status = 5;
  int32 type = 6;
  string created_at = 7;
  string updated_at = 8;
}
